# IS-Notify

./: AGENTS.md  LICENSE  README.md  notification-reader.py  pyproject.toml
.github/: copilot-instructions.md
is_notify/: __init__.py  __main__.py  config.py  matrix.py  watcher.py
